--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -2,26 +2,43 @@
   height: 50px;
 } */
 
-.header {
+/* .header {
+  position: fixed;
   background-color: lightgrey;
   width: 100%;
-}
+  height: 50px;
+  font-family: 'Abel', sans-serif;
+} */
 
 .align-right {
-  margin-left: 50px;
+  margin: 0px;
+  display: inline-block;
+  position: absolute;
+  right: 10px;
+  top: 12px;
+  text-decoration: none;
+  color: black;
+  font-size: 20px;
+}
+
+.align-right:hover {
+  text-decoration: underline;
 }
 
 .blue {
-  color: teal;
+  color: rgb(110, 169, 173);
 }
 
-.Header {
-  height: 40px;
-  display: flex;
-  align-items: normal;
-  justify-content: space-between;
+.logo {
+  /* margin: 10px 15px 15px 15px; */
+  display: inline-block;
+  position: absolute;
+  left: 10px;
+  top: 5px;
+  margin-top: 10px;
+  font-size: 30px;
 }
-
+/* 
 .Header h1 {
   margin: 0;
 }
@@ -83,4 +100,4 @@
   .Header__tagline--narrow {
     display: inherit;
   }
-}
+} */
