--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,103 +1,61 @@
-/* .windChime {
-  height: 50px;
-} */
-
-/* .header {
-  position: fixed;
-  background-color: lightgrey;
-  width: 100%;
-  height: 50px;
-  font-family: 'Abel', sans-serif;
-} */
 
 .align-right {
   margin: 0px;
   display: inline-block;
   position: absolute;
   right: 10px;
-  top: 12px;
-  text-decoration: none;
+  /* top: 10px; */
   color: black;
-  font-size: 20px;
+  font-size: 1.25rem;
 }
 
-.align-right:hover {
+.header-link:hover {
   text-decoration: underline;
+}
+
+.header-link {
+  text-decoration: none;
+  color: black;
 }
 
 .blue {
   color: rgb(110, 169, 173);
 }
 
-.logo {
+.logo-link {
   /* margin: 10px 15px 15px 15px; */
   display: inline-block;
   position: absolute;
   left: 10px;
   top: 5px;
-  margin-top: 10px;
-  font-size: 30px;
-}
-/* 
-.Header h1 {
-  margin: 0;
-}
-
-.Header a {
-  color: #444;
+  color: black;
+  font-size: 1.75rem;
   text-decoration: none;
-}
-
-.Header__tagline--wide {
-  opacity: 0.35;
-  margin-left: 10px;
-}
-
-.Header__tagline--narrow {
-  opacity: 0.35;
-  display: block;
   text-align: center;
-  display: none;
-  margin-top: 10px;
 }
 
-.Header__not-logged-in {
-  display: flex;
-  flex: 1;
-  align-items: center;
-  justify-content: flex-end;
-}
-
-.Header__not-logged-in a:last-child {
-  background: rgb(255, 121, 121);
-  color: white;
-  padding: 5px 15px;
-  border-radius: 15px;
-  margin-left: 10px;
-}
-
-.Header__logged-in a {
-  border: 1px solid rgba(0, 0, 0, 0.25);
-  padding: 5px 15px;
-  border-radius: 15px;
+.logo-link:hover {
+  text-decoration: underline;
 }
 
 @media screen and (min-width: 450px) {
-  .Header {
+  /* .Header {
     align-items: baseline;
   }
 
   .Header h1 {
     font-size: 22pt;
-  }
+  } */
 }
 
 @media screen and (max-width: 490px) {
-  .Header__tagline--wide {
-    display: none;
-  }
+  .align-right {
+    font-size: 1rem;
+    /* top: 12px; */
+  } 
 
-  .Header__tagline--narrow {
-    display: inherit;
+  .logo-link {
+  font-size: 1.50rem;
+  top: 8px;
   }
-} */
+}
