--- a/src/index.css
+++ b/src/index.css
@@ -31,7 +31,7 @@ code {
 
 .text-container {
   width: 60%;
-  margin: 0 auto;
+  margin: 25px auto;
   text-align: center;
 }
 
@@ -45,7 +45,7 @@ code {
   color: rgb(110, 169, 173);
 }
 
-.button {
+/* .button {
   border-radius: 5px;
   font-size: 14px;
   text-align: center;
@@ -53,11 +53,11 @@ code {
   margin: 20px auto;
   padding: 10px;
   background-color: rgb(207, 233, 235);
-}
+} */
 
 .link {
   text-decoration: none;
-  color: black;
+  color: white;
   display: inline-block;
   text-align: center;
   margin: 0 auto;
@@ -77,19 +77,7 @@ code {
   width: 80%;
   margin: auto;
   padding-top: 50px;
-  /* border: 1px solid black; */
 }
-
-/* .btn-default {
-  font-family: 'Helvetica', 'Arial', sans-serif;
-  margin: auto 10px;
-  border-radius: 5px;
-  margin-top: 15px;
-}
-
-.btn:hover {
-  background-color: rgb(209, 235, 241);
-} */
 
 .error {
   color: red;
@@ -102,6 +90,7 @@ code {
   padding-left: 15px;
   margin-bottom: 15px;
   border-radius: 10px;
+  /* font-family: 'Abel', sans-serif; */
   /* border: 1px solid lightgrey; */
 }
 
@@ -125,4 +114,62 @@ code {
   float: right;
   padding-right: 15px;
   padding-top: 2.5px;
+}
+
+.btn {
+  display: inline-block;
+  border: none;
+  border-radius: 15px;
+  width: 8rem;
+  padding: .5rem .5rem;
+  margin: .5rem;
+  text-decoration: none;
+  background: rgb(77, 153, 167);  
+  color: white;
+  font-family: sans-serif;
+  font-size: .85rem;
+  cursor: pointer;
+  text-align: center;
+  transition: background 250ms ease-in-out, 
+              transform 150ms ease;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+}
+
+.btn:hover,
+.btn:focus {
+  /* background: rgb(77, 153, 167); */
+  background: rgb(173, 218, 226);
+}
+
+.btn:focus {
+  outline: 1px solid #fff;
+  outline-offset: -4px;
+}
+
+.btn:active {
+  transform: scale(0.99);
+}
+
+.nav {
+  width: 6rem;
+  padding: .5rem .5rem; 
+  margin: .5rem .25rem;
+}
+
+.artist {
+  width: 12rem;
+}
+
+.sign-in {
+  display: block;
+  margin: 0px auto;
+}
+
+@media screen and (max-width: 490px) {
+  .nav {
+    width: 4.5rem;
+    padding: .5rem 0rem; 
+    margin: .5rem .1rem;
+  }
 }
