--- a/src/components/Weather/Weather.css
+++ b/src/components/Weather/Weather.css
@@ -3,10 +3,7 @@
 #weather-form {
   font-family: 'Helvetica', 'Arial', sans-serif;
   text-align: center;
-  background-color: rgb(243, 243, 243);
-  border: 1px lightgrey solid;
-  border-radius: 10px;
-  padding: 10px 0px 30px 0px;
+  padding: 10px 0px;
 }
 
 .weather-container {
@@ -14,6 +11,11 @@
   text-align: center;
 }
 
-.input {
-  font-family: 'Helvetica', 'Arial', sans-serif;
+input{
+  width: 50%;
+  padding: 8px 20px;
+  margin: 8px 0;
+  /* display: inline-block; */
+  border: 1px solid #ccc;
+  box-sizing: border-box;
 }
