--- a/src/index.css
+++ b/src/index.css
@@ -85,13 +85,17 @@ code {
 }
 
 .ribbon {
-  height: 30px;
-  /* background-color: rgb(207, 233, 235); */
+  margin: 15px auto;
+  height: 40px;
   padding-left: 15px;
-  margin-bottom: 15px;
   border-radius: 10px;
-  /* font-family: 'Abel', sans-serif; */
-  /* border: 1px solid lightgrey; */
+  color: rgb(90, 90, 90);
+}
+
+.ribbon-header{
+  padding-top: 4px;
+  font-size: 20px;
+  display: inline-block;
 }
 
 .one {
@@ -99,21 +103,21 @@ code {
 }
 
 .two {
-  background-color: rgb(208, 237, 240);
+  background-color: rgb(194, 226, 229);
 }
 
 .three {
-  background-color: rgb(188, 236, 240);
+  background-color: rgb(151, 198, 202);
 }
 
 .ribbon-text {
   /* display: inline; */
-  font-size: 16px;
+  font-size: 14px;
   font-weight: normal;
   font-style: italic;
   float: right;
-  padding-right: 15px;
-  padding-top: 2.5px;
+  padding-right: 5px;
+  /* padding-top: 2.5px; */
 }
 
 .btn {
@@ -139,7 +143,7 @@ code {
 .btn:hover,
 .btn:focus {
   /* background: rgb(77, 153, 167); */
-  background: rgb(173, 218, 226);
+  background: rgb(194, 226, 229);
 }
 
 .btn:focus {
@@ -159,6 +163,7 @@ code {
 
 .artist {
   width: 12rem;
+  background: rgb(122, 122, 122)
 }
 
 .sign-in {
@@ -166,10 +171,47 @@ code {
   margin: 0px auto;
 }
 
+.weather {
+  width: 4.5rem;
+  padding: .25rem 0rem; 
+  margin: .5rem .5rem;
+  font-size: .75rem;
+}
+
+h4 {
+  color: rgb(90, 90, 90);
+  font-family: sans-serif;
+  font-weight: normal;
+  font-size: 16px;
+  text-decoration: underline;
+}
+
+.genre {
+  background: rgb(122, 122, 122)
+}
+
 @media screen and (max-width: 490px) {
   .nav {
     width: 4.5rem;
-    padding: .5rem 0rem; 
-    margin: .5rem .1rem;
+    padding: .25rem 0rem; 
+    margin: .75rem .2rem;
+  }
+
+  .hidden {
+    visibility: hidden;
+  }
+
+  .ribbon-text {
+    /* float: none; */
+  }
+
+  .App__main {
+    width: 90%;
+  }
+
+  .ribbon-header{
+    padding-top: 5.5px;
+    font-size: 18px;
+    /* font-weight: bold; */
   }
 }
