--- a/src/components/Weather/Weather.css
+++ b/src/components/Weather/Weather.css
@@ -3,7 +3,7 @@
 #weather-form {
   font-family: 'Helvetica', 'Arial', sans-serif;
   text-align: center;
-  padding: 10px 0px;
+  padding: 0px;
 }
 
 .weather-container {
