--- a/src/index.css
+++ b/src/index.css
@@ -189,12 +189,18 @@ code {
   font-size: .75rem;
 }
 
+.mood {
+  width: 12rem;
+  margin: 25px auto;
+}
+
 h4 {
   color: rgb(90, 90, 90);
   font-family: sans-serif;
   font-weight: normal;
   font-size: 16px;
   text-decoration: underline;
+  margin: 20px auto;
 }
 
 .genre {
