--- a/src/components/PlaylistResults/PlaylistResults.css
+++ b/src/components/PlaylistResults/PlaylistResults.css
@@ -1,3 +1,5 @@
+
+
 .results {
   display: block;
   background-color: rgb(243, 243, 243);
@@ -18,3 +20,44 @@
   margin-left: 5px;
   margin-right: 5px;
 }
+
+/* .container {
+  position: relative;
+  width: 250px;
+  height: 80px;
+}
+
+.iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 1;
+  width: 250px;
+  height: 80px;
+  /* opacity: 0; */
+  /* transition: opacity 700ms; */
+/* } */
+/* 
+.loading {
+  margin: auto;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  width: 250px;
+  height: 80px;
+  z-index: 0;
+}
+
+.loading i{
+  animation: rotation 2s infinite linear;
+}
+
+@keyframes rotation {
+  from {
+    transform: rotate(0deg);
+  } to {
+    transform: rotate(359deg);
+  }
+}  */
