--- a/src/components/Weather/Weather.css
+++ b/src/components/Weather/Weather.css
@@ -15,7 +15,7 @@ input{
   width: 50%;
   padding: 8px 20px;
   margin: 8px 0;
-  /* display: inline-block; */
   border: 1px solid #ccc;
+  border-radius: 10px;
   box-sizing: border-box;
 }
