--- a/src/index.css
+++ b/src/index.css
@@ -22,6 +22,8 @@ code {
 
 .container__centered {
   display: block;
+  margin: 20px auto 40px auto;
+  text-align: center;
 }
 
 .wind-chime__text {
@@ -199,6 +201,13 @@ h4 {
   background: rgb(243, 185, 157)
 }
 
+.image {
+  height: 300px;
+  margin: 10px auto 40px auto;
+  border: 4px solid rgb(77, 153, 167);
+  border-radius: 10px;  
+}
+
 @media screen and (max-width: 490px) {
   .nav {
     width: 4.5rem;
@@ -263,4 +272,8 @@ h4 {
     margin: auto;
     padding-top: 50px;
   }
+
+  .container__centered {
+    width: 60%;
+  } 
 }
