--- a/src/components/Playlist/Playlist.css
+++ b/src/components/Playlist/Playlist.css
@@ -1,14 +1,28 @@
 .container {
+  position: relative;
+  width: 100%;
+  height: 100px;
   margin: 20px auto;
   text-align: center;
-  display: block;
-  width: 100%;
 }
 
 .iframe-box{
-  margin: 20px auto 0px auto;
-  text-align: center;
-  display: block;
+  position: absolute;
+  top: 20px;
+  right: 0;
+  bottom: 0;
+  z-index: 1;
   width: 100%;
   height: 80px;
+}
+
+.loading {
+  font-style: italic;
+  color: rgb(38, 104, 116);
+  position: absolute;
+  top: 20px;
+  z-index: 0;
+  width: 100%;
+  height: 80px;
+  background-color: rgb(232, 234, 235);
 }
