--- a/src/components/PlaylistResults/PlaylistResults.css
+++ b/src/components/PlaylistResults/PlaylistResults.css
@@ -1,20 +1,22 @@
 
 
 .results {
-  display: block;
+  position: relative;
   background-color: rgb(243, 243, 243);
   height: 500px;
   width: 100%;
   border-radius: 10px;
-  /* margin-left: 0px; */
   text-align: center;
-  margin-bottom: 25px;
+  margin: 0px auto  25px auto;
 }
 
 .iframe {
-  margin: auto;
-  text-align: center;
   width: 250px;
+  height: 380px;
+  left: 12.5%;
+  position: absolute;
+  z-index: 1;
+  width: 75%;
   height: 380px;
 }
 
@@ -22,6 +24,17 @@
   margin-bottom: 15px;
   margin-left: 5px;
   margin-right: 5px;
+}
+
+.loading-result {
+  font-style: italic;
+  color: rgb(38, 104, 116);
+  left: 12.5%;
+  position: absolute;
+  z-index: 0;
+  width: 75%;
+  height: 380px;
+  background-color: rgb(243, 243, 243);
 }
 
 @media screen and (min-width: 900px) {
@@ -35,44 +48,3 @@
     width: 400px;
   }
 }
-
-/* .container {
-  position: relative;
-  width: 250px;
-  height: 80px;
-}
-
-.iframe {
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: 1;
-  width: 250px;
-  height: 80px;
-  /* opacity: 0; */
-  /* transition: opacity 700ms; */
-/* } */
-/* 
-.loading {
-  margin: auto;
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  width: 250px;
-  height: 80px;
-  z-index: 0;
-}
-
-.loading i{
-  animation: rotation 2s infinite linear;
-}
-
-@keyframes rotation {
-  from {
-    transform: rotate(0deg);
-  } to {
-    transform: rotate(359deg);
-  }
-}  */
