--- a/src/components/UserPlaylists/UserPlaylists.css
+++ b/src/components/UserPlaylists/UserPlaylists.css
@@ -68,6 +68,17 @@ p {
   margin: 10px auto;
 }
 
+.no-playlists{
+  width: 80%;
+  text-align: center;
+  margin: auto;
+}
+
+.playlist-center .btn{
+ width: 200px;
+ margin: 10px auto;
+}
+
 @media screen and (min-width: 450px) {
   p {
     font-size: 14px;
@@ -89,12 +100,9 @@ p {
   .result{
       background-color: rgb(232, 234, 235);
       border-radius: 10px;
-      /* width: 100%; */
       margin: 10px 2%;
       padding-bottom: 25px;
       text-align: center;
       flex: 45%;
-      /* display: inline-block; */
-      /* min-width: 275px; */
   }
 }
