--- a/src/index.css
+++ b/src/index.css
@@ -293,6 +293,11 @@ img[alt=windchime]{
   .hidden {
     visibility: hidden;
   }
+
+  .genre{
+    width: 110px;
+    display: inline-block;
+  }
 }
 
 @media screen and (min-width: 650px) {
