--- a/src/components/SeedGenre/SeedGenre.css
+++ b/src/components/SeedGenre/SeedGenre.css
@@ -1,48 +1,9 @@
-/* .genre-btn {
-  margin-right: 2.5px;
-  padding: 3px;
-  /* background-color: rgb(220, 235, 240); */
-  /* border: .5px solid lightgrey; */
-  /* border-radius: 10px; 
-} */
-
-/* .genre-btn {
-  display: inline-block;
-  border: none;
-  border-radius: 15px;
-  width: 8rem;
-  padding: .5rem .5rem;
-  margin: .5rem;
-  text-decoration: none;
-  background: rgb(77, 153, 167);  
-  color: white;
-  font-family: sans-serif;
-  font-size: .85rem;
-  cursor: pointer;
-  text-align: center;
-  transition: background 250ms ease-in-out, 
-              transform 150ms ease;
-  -webkit-appearance: none;
-  -moz-appearance: none;
-}
-
-.genre-btn:hover,
-.genre-btn:focus {
-  background: rgb(173, 218, 226);
-}
-
-.genre-btn:focus {
-  outline: 1px solid #fff;
-  outline-offset: -4px;
-}
-
-.genre-btn:active {
-  transform: scale(0.99);
-} */
-
 .center {
   display: block;
   text-align: center;
+  padding: 15px;
+  background-color: rgb(243, 243, 243);
+  border-radius: 10px;
 }
 
 .inline {
@@ -53,11 +14,21 @@
 .mapped-genres {
   font-family: 'Helvetica', 'Arial', sans-serif;
   text-align: center;
-  /* background-color: rgb(228, 239, 240); */
-  /* background-color: rgb(240, 245, 245);
-  border: 1px rgb(211, 211, 211) solid; */
   border-radius: 10px;
   padding: 10px 0px;
+}
+
+.top-five{
+  text-align: center;
+  margin: auto;
+}
+
+.top-five img{
+  height: 40px;
+  width: 40px;
+  margin: 2.5px;
+  display: inline-block;
+  border-radius: 10px;
 }
 
 .top-artists {
@@ -65,4 +36,12 @@
   border: 1px rgb(211, 211, 211) solid;
   border-radius: 10px;
   padding: 20px 0px;
+}
+
+@media screen and (min-width: 800px) {
+  .top-five img{
+    height: 75px;
+    width: 75px;
+    margin: 5px;
+  }
 }
